--- a/src/app/components/utility/sidebar/sidebar.component.html
+++ b/src/app/components/utility/sidebar/sidebar.component.html
@@ -3,13 +3,13 @@
 >
     <!-- Brand -->
     <ul class="brand-line d-flex">
-        <li title="campaign-overview">
+        <li class="entry" title="campaign-overview">
             <a routerLink="{{ routingService.getRoutePath('campaign-overview', {}) }}" class="on-hover-show flex overview-link">
                 <span class="fas fa-chevron-left fa-2x"></span>
             </a> 
         </li>
 
-        <li class="flex-1 brand-entry" title="{{currentCampaign?.name}}-Home" [ngClass]="{'disabled-entry': !currentCampaign}">
+        <li class="flex-1 entry brand-entry" title="{{currentCampaign?.name}}-Home" [ngClass]="{'disabled-entry': !currentCampaign}">
             <a class="pl-0" routerLink="{{ routingService.getRoutePath('home2', {campaign: currentCampaign?.name}) }}">
                 <h3 class="d-flex align-items-center justify-content-center" id="brand"> 
                     <img class="campaign-icon"
@@ -25,7 +25,7 @@
     <!-- Sidebar Items -->
     <ul>
         <!-- User Section. This is a menu-container, it's title identified by "container-title" class, which is relevant for swipe gesture behaviour, see app.component.ts -->
-        <li id="user-section" [ngClass]="{'active': showUserSection, 'disabled-entry': !currentCampaign}">
+        <li class="entry" id="user-section" [ngClass]="{'active': showUserSection, 'disabled-entry': !currentCampaign}">
             <a class="pointer" (click)="showUserSection = !showUserSection">
                 <i class="fa fa-user-circle"></i>
                 <span class="on-hover-show container-title">
@@ -36,7 +36,7 @@
             </a>
             <ul id="user-links" class="on-hover-show">
                 <!-- Profile -->
-                <li>
+                <li class="entry">
                     <a class="on-hover-show" routerLink="{{ routingService.getRoutePath('profile', {campaign: currentCampaign?.name, username: tokenService.getCurrentUserName()})}}">
                         <i class="fa fa-user"></i>
                         <span> Profile </span>
@@ -44,7 +44,7 @@
                 </li>
 
                 <!-- Admin Section -->
-                <li *ngIf="showAdminSection">
+                <li *ngIf="showAdminSection" class="entry">
                     <a class="on-hover-show" routerLink="{{ routingService.getRoutePath('campaign-admin', {campaign: currentCampaign?.name}) }}" >
                         <i class="fas fa-dragon"></i>
                         <span> Campaign Admin </span>
@@ -52,7 +52,7 @@
                 </li>
 
                 <!-- Logout -->
-                <li>
+                <li class="entry">
                     <a class="on-hover-show pointer" (click)="logout()"> 
                         <i class="fas fa-sign-out-alt"></i>
                         <span> Logout</span> 
@@ -64,7 +64,7 @@
         <!-- Sidebar Entries -->
         <li [ngClass]="{'disabled-entry': !currentCampaign}">
             <ul>
-                <li *ngFor="let entry of sidebarEntries">
+                <li class="entry" *ngFor="let entry of sidebarEntries">
                     <a routerLink="{{entry.route}}" class="d-flex align-items-center entry">
                         <i class="{{ entry.iconClass}}"></i>
                         <span class="on-hover-show">{{entry.title}}</span>
