--- a/src/app/components/utility/sidebar/sidebar.component.scss
+++ b/src/app/components/utility/sidebar/sidebar.component.scss
@@ -19,9 +19,9 @@
     }
 
     /* Styling list elements so their background color changes on hover but they still remain some distance away from the left edge */
-    li:hover,
-    li:focus a,
-    li a:focus{
+    li.entry:hover,
+    li.entry:focus a,
+    li.entry a:focus{
         background-color: var(--secondary);
         color: var(--link-blue);
     }
