Added functionality to fade in the article via animation to article mixin and applied to subsequent child components

--- a/src/app/components/articles/map/map.component.html
+++ b/src/app/components/articles/map/map.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main" #article>
     <article *ngIf="maps && articleData; else loading" class="container">
         <!-- Heading -->
         <div class="row" *ngIf="hasUpdatePermission">
