--- a/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
+++ b/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main" #article>
     <article *ngIf="articleData && campaign; else loading" class="container">
         <div class="row m-0">
             <div class="col-12 d-flex justify-content-end">
