Added support for fadein animation in article list mixin and added it to rules and spells

--- a/src/app/components/articles/rules/rules.component.html
+++ b/src/app/components/articles/rules/rules.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main" #listArticle>
     <article *ngIf="articles; else loading" class="container">
 
         <!-- Heading -->
