Added fade in animation to home page

--- a/src/app/components/home2/home2.component.html
+++ b/src/app/components/home2/home2.component.html
@@ -1,5 +1,5 @@
 
-<div class="main" *ngIf="campaignData; else loading">
+<div class="main" *ngIf="campaignData; else loading" #article>
     <!-- Heading -->
     <header class="mb-1">
         <div class="d-flex flex-column">
