Fixed broken URLs after some stuff around campaign serialization was changed

--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -38,7 +38,7 @@ id="container-overview"
             <div class="flex-1">
                 <img 
                 class="background-image" 
-                [src]="constants.wikiUrl + campaign.background_image" 
+                [src]="campaign.background_image" 
                 alt="Campaign Titel Image"
                 >
             </div>
