--- a/src/app/components/utility/background-image/background-image.component.html
+++ b/src/app/components/utility/background-image/background-image.component.html
@@ -1,4 +1,4 @@
 <div id="bg"
 #backgroundImage
-[style.background-image]="'linear-gradient(0deg,rgba(19,21,25,.5), rgba(19,21,25,.5)), url('+ constants.wikiUrl + currentCampaign?.background_image +'), url('+ constants.defaultBackgroundImageUrl +')'"
+[style.background-image]="'linear-gradient(0deg,rgba(19,21,25,.5), rgba(19,21,25,.5)), url('+ currentCampaign?.background_image +'), url('+ constants.defaultBackgroundImageUrl +')'"
 ></div>
