Made admin/campaign mobile friendly

--- a/src/app/components/articles/admin/admin.component.html
+++ b/src/app/components/articles/admin/admin.component.html
@@ -48,26 +48,20 @@
             </div>
     
             <!-- Table -->
-            <div class="usertable container">
+            <div class="usertable">
                 <!-- Table Heading -->
                 <div class="row">
-                    <h4 class="col-3 d-flex flex-column">
+                    <h4 class="col-5 col-md-3 d-flex flex-column">
                         <div>
                             <span class="fa fa-user-circle" placement="top" [ngbTooltip]="'Username'"></span>
-                            Username
+                            Name
                         </div>
                     </h4>
-                    <h4 class="col-1">
-                        <span class="fas fa-crown" placement="top" [ngbTooltip]="'Admins'"></span>
-                    </h4>                    
-                    <h4 class="col-1">
-                        <span class="fas fa-gamepad" placement="top" [ngbTooltip]="'SuperUsers aka Admins of Admins'"></span>
-                    </h4>
-                    <h4 class="col-3">
+                    <h4 class="col-6 col-md-5">
                         <span class="fa fa-group" placement="top" [ngbTooltip]="'Access-right groups'"></span>
                         Groups
                     </h4>
-                    <h4 class="col-3">
+                    <h4 class="col-3 hide-on-mobile">
                         <span class="fa fa-envelope-o" placement="top" [ngbTooltip]="'Email-Address'"></span>
                         Email
                     </h4>
