--- a/src/app/components/articles/quest-overview/quest-overview.component.html
+++ b/src/app/components/articles/quest-overview/quest-overview.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main" #overviewMainCard>
     <article *ngIf="quests; else loading" class="container">
         <!-- Heading -->
         <div class="row">
