Added animation to session audio overview

--- a/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
+++ b/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main" #overviewMainCard>
     <article *ngIf="sessionAudioFiles; else loading">
         <h1 class="text-center">Session Audio Files</h1>
         <!-- Requires m-0 because on mobile it else goes into overflow -->
