--- a/src/app/components/utility/campaign/campaign.component.html
+++ b/src/app/components/utility/campaign/campaign.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main" #article>
     <article *ngIf="articleData; else loading" class="container">
         <div class="row">
             <div class="col-12">
