Adds info about the user roles to the campaign component in tooltips

--- a/src/app/components/utility/campaign/campaign.component.html
+++ b/src/app/components/utility/campaign/campaign.component.html
@@ -42,15 +42,15 @@
         <!-- Members & Admins-->
         <h1> 
             <span class="fas fa-users-cog"></span> 
-            Campaign Members 
+            Campaign Members
         </h1>
         
         <div class="mb-3 row">
             <div class="col-sm-6 col-12 mb-3">
                 <div class="p-3 card">
                     <h3 class="text-center">
-                        <span class="fas fa-user-secret"></span>
                         Admins
+                        <sup class="fas fa-info-circle icon" [ngbTooltip]="adminTooltip"></sup>
                     </h3>
 
                     <div *ngFor="let user of articleData.admins">
@@ -79,8 +79,8 @@
             <div class="col-sm-6 col-12 mb-3">
                 <div class="p-3 card">
                     <h3 class="text-center">
-                        <span class="fas fa-users"></span>
                         Party members
+                        <sup class="fas fa-info-circle icon" [ngbTooltip]="memberTooltip"></sup>
                     </h3>
 
                     <div *ngFor="let user of articleData.members">
@@ -107,8 +107,8 @@
             <div class="col-sm-6 col-12 mb-3">
                 <div class="p-3 card">
                     <h3 class="text-center">
-                        <span class="fas fa-users"></span>
                         Guests
+                        <sup class="fas fa-info-circle icon" [ngbTooltip]="guestTooltip"></sup>
                     </h3>
 
                     <div *ngFor="let user of articleData.guests">
@@ -164,4 +164,22 @@
         <span class="fas user-plus icon"> </span>
         Add Guest
     </button>
+</ng-template>
+
+<ng-template #adminTooltip>
+    <div class="alert alert-info m-0 p-0">
+        Allows adding admins, members and guests to a campaign. Does not add the person to the list of possible "authors" for diaryentries.
+    </div>
+</ng-template>
+
+<ng-template #memberTooltip>
+    <div class="alert alert-info m-0 p-0">
+        Allows creating, reading, updating and deleting articles in this campaign. Also makes the person a possible "author" for diaryentries.
+    </div>
+</ng-template>
+
+<ng-template #guestTooltip>
+    <div class="alert alert-info m-0 p-0">
+        Allows only reading articles in this campaign.
+    </div>
 </ng-template>
