--- a/src/app/components/articles/admin/admin.component.scss
+++ b/src/app/components/articles/admin/admin.component.scss
@@ -22,6 +22,10 @@
     background-color: #936512 !important;
 }
 
+.campaign-icon{
+    max-height: 2rem;
+}
+
 @media(max-width: 768px){
     .hide-on-mobile{
         display: none !important;
