--- a/src/app/components/utility/campaign/campaign.component.html
+++ b/src/app/components/utility/campaign/campaign.component.html
@@ -31,7 +31,7 @@
 
             <div class="col-12 row mt-4">
                 <strong class="col-sm-3 col-6">Default Map: </strong>
-                <div class="col-sm-9 col-6">{{ campaign.default_map_details.name }}</div>
+                <div class="col-sm-9 col-6">{{ campaign.default_map_details?.name }}</div>
 
                 <strong class="col-sm-3 col-6">Subtitle: </strong>
                 <div class="col-sm-9 col-6" [innerHtml]="campaign.subtitle"></div>
