--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -22,7 +22,7 @@
                         parent_location_name: articleData.parent_location_details.name, 
                         location_name: articleData.name, 
                         map_name: marker.map,
-                        campaign: campaign
+                        campaign: campaign.name
                     })
                 }}"
                 ></i>
@@ -35,7 +35,7 @@
                 routerLink="{{routingService.getRoutePath('marker-create', {
                         parent_location_name: articleData.parent_location_details.name,
                         location_name: articleData.name,
-                        campaign: campaign
+                        campaign: campaign.name
                     })
                 }}"
                 ></i>
@@ -77,7 +77,7 @@
             [heading]="'Characters of Interest'" 
             [items]="articleData.characters" 
             [articleType]="'character'" 
-            [createLink]="routingService.getRoutePath('character-create', {campaign: campaign})"
+            [createLink]="routingService.getRoutePath('character-create', {campaign: campaign.name})"
             ></app-object-list>
         </div>
 
@@ -91,7 +91,7 @@
         <!-- Footer (Move to other Article + Delete Article) -->
         <app-article-footer
         (delete)="deleteArticle()"
-        [link]="routingService.getRoutePath('location-overview', {campaign: campaign})"
+        [link]="routingService.getRoutePath('location-overview', {campaign: campaign.name})"
         [label]="'Back to Locations'"
         [deleteMessage]="'Delete '+articleData.name+'?'"
         ></app-article-footer>
