--- a/src/app/components/articles/organization-article/organization-article.component.html
+++ b/src/app/components/articles/organization-article/organization-article.component.html
@@ -21,7 +21,7 @@
                 <a 
                 *ngIf="articleData.leader; else Unknown" 
                 class="ml-1" 
-                routerLink="{{ routingService.getRoutePath('character', {name: articleData.leader, campaign: campaign}) }}"
+                routerLink="{{ routingService.getRoutePath('character', {name: articleData.leader, campaign: campaign.name}) }}"
                 >
                     {{ articleData.leader }}
                 </a>
@@ -37,7 +37,7 @@
                 routerLink="{{ routingService.getRoutePath('location', {
                         name: articleData.headquarter_details.name, 
                         parent_name: articleData.headquarter_details.parent_name,
-                        campaign: campaign
+                        campaign: campaign.name
                     })
                 }}"
                 >
@@ -69,7 +69,7 @@
             <app-object-list    
             [heading]="'Members'"
             [items]="articleData.members"
-            [createLink]="routingService.getRoutePath('character-create', {campaign: campaign})"
+            [createLink]="routingService.getRoutePath('character-create', {campaign: campaign.name})"
             [articleType]="'character'"
             ></app-object-list>
         </div>
@@ -77,7 +77,7 @@
         <!-- Footer (Move to other Article + Delete Article) -->
         <app-article-footer
         (delete)="deleteArticle()"
-        [link]="routingService.getRoutePath('organization-overview', {campaign: campaign})"
+        [link]="routingService.getRoutePath('organization-overview', {campaign: campaign.name})"
         [label]="'Back to Organizations'"
         [deleteMessage]="'Delete '+articleData.name+'?'"
         ></app-article-footer>
