Added an option to hide the delete button in the article footer

--- a/src/app/components/utility/article-footer/article-footer.component.html
+++ b/src/app/components/utility/article-footer/article-footer.component.html
@@ -12,6 +12,7 @@
 
     <!-- Delete Article -->
     <app-delete-toggle
+    *ngIf="showDelete"
     [deleteMessage]="deleteMessage"
     (deleteEvent)="onDelete()"
     class="col-md-9 float-right px-0"
