--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -7,7 +7,7 @@ id="container-overview"
 >
     <div class="row mx-0" id="campaign-overview-heading" *ngIf="isGlobalAdmin()">
         <h3 class="flex-1 text-center">Choose your campaign</h3>
-        <div>
+        <div id="heading-buttons">
             <a routerLink="{{routingService.getRoutePath('admin')}}" class="float-right alert alert-info mb-0 p-2 mx-2">
                 <span class="fas fa-user-cog"></span>
                 General administration
@@ -19,33 +19,31 @@ id="container-overview"
             </a>
         </div>
     </div>
-    <div class="row mx-0" id="campaign-row">
+    <div class="row mx-0" id="campaign-overview-body">
         <a 
-        class="col-sm px-0 campaign pointer" 
+        class="px-0 campaign pointer" 
         *ngFor="let campaign of campaignData" 
         (click)="routeToCampaign(campaign.name)"
-        [ngClass]="{'events-disabled': !campaign.isMember && !campaign.isGuest}"
+        [ngClass]="{
+            'events-disabled': !campaign.isMember && !campaign.isGuest,
+            'col-sm-12': campaignData.length === 1 || campaignData.length === 3,
+            'col-sm-6': campaignData.length === 2 || campaignData.length === 4,
+            'col-sm-4': campaignData.length >= 5
+        }"
+        [style.background-image]="'url('+ campaign.background_image +')'"
         >
             <div class="campaign-overlay overlay-heading text-center">
-                <h3> {{campaign.name}}</h3>
+                <h3 class="px-3"> {{campaign.name}}</h3>
             </div>
 
             <div 
             *ngIf="!campaign.isMember && !campaign.isGuest"
             class="campaign-overlay overlay-lock fas fa-lock fa-5x">
-            </div>
-
-            <div class="flex-1">
-                <img 
-                class="background-image" 
-                [src]="campaign.background_image" 
-                alt="Campaign Titel Image"
-                >
-            </div>
-
+            </div>        
         </a>
-
     </div>
+
+
 </div>
 
 <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
