--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -5,9 +5,9 @@ id="container-overview"
 *ngIf="true" 
 [@slideInOut]
 >
-    <div class="row mx-0" id="campaign-overview-heading" *ngIf="isGlobalAdmin()">
+    <div class="row mx-0" id="campaign-overview-heading">
         <h3 class="flex-1 text-center">Choose your campaign</h3>
-        <div id="heading-buttons">
+        <div id="heading-buttons" *ngIf="isGlobalAdmin()">
             <a routerLink="{{routingService.getRoutePath('admin')}}" class="float-right alert alert-info mb-0 p-2 mx-2">
                 <span class="fas fa-user-cog"></span>
                 General administration
@@ -26,9 +26,9 @@ id="container-overview"
         (click)="routeToCampaign(campaign.name)"
         [ngClass]="{
             'events-disabled': !campaign.isMember && !campaign.isGuest,
-            'col-sm-12': campaignData.length === 1 || campaignData.length === 3,
+            'col-sm-12': campaignData.length === 1,
             'col-sm-6': campaignData.length === 2 || campaignData.length === 4,
-            'col-sm-4': campaignData.length >= 5
+            'col-sm-4': campaignData.length === 3 || campaignData.length >= 5
         }"
         [style.background-image]="'url('+ campaign.background_image +')'"
         >
