--- a/src/app/components/utility/campaign/campaign.component.html
+++ b/src/app/components/utility/campaign/campaign.component.html
@@ -3,7 +3,7 @@
         <div class="row" *ngIf="!articleData.is_deactivated">
             <div class="col-12">
                 <app-edit-toggle 
-                [isInUpdateState]=false 
+                [isInUpdateState]="false"
                 [link]="'update'"
                 ></app-edit-toggle>
             </div>
